2007-10-03  Brian Granger <ellisonbg@gmail.com>

	* ipython1.kernel:  Any FunctionType can now be pulled or 
	pushed to the engines.  This includes fuctions with references
	to globals, but does not include closures.  The map/mapAll
	methods have been adapted to take functions now.  This approach
	doesn't work for classes that are callable though.  Still need
	to add tests of how push/pullSerialized handle this.


2007-06-21  Brian Granger <ellisonbg@gmail.com>

	* ipython1.core.interpreter:  Made sure that funny edge cases
	are handled properly by the Interpreter's split_command method.
	The funny cases were: semicolon terminated lines, trailing
	whitespaces and multiline input with no terminating newline.
	All these should work fine now.  I have added test cases to
	engineservicetest.py that test for these things.


2007-06-17  Brian Granger <ellisonbg@gmail.com>

	* ipython1.kernel.task.py: Created a new TaskResult object
	that is returned when getTaskResult is called.  This new 
	object provide a much simpler and intuitive way of accessing
	the results of a task.  The variables that are pulled back
	are available as attributes of the TaskResult object.  There
	are also engineID, taskID attributes.  Failures are handled 
	through a failure attribute, but remote exceptions can also
	be reraised by calling the raiseException method.
	
	* ipython1.kernel.taskclient/taskxmlrpc.py:  Minor changes to reflect
	new TaskResult object that is returned by getTaskResult.
	
	* doc/examples: Updated TaskController examples to use new
	TaskResult object.

2007-06-16  Brian Granger <ellisonbg@gmail.com>

	* Merged in work from core-refactor branch.
	
	* Copied the recently added core1 into core and made a few
	changes to make it work well with the engine/controller stuff.
	
	* ipython1.core.interpreter.py: Added option for having execute
	actually raise any exceptions that it gets.  Made sure that
	SyntaxError/IndentationError is raised upon compilation.  Added