@@ -1,3 +1,8 @@
+2007-11-13 Darren Dale <darren.dale@cornell.edu>
+
+        * Fixed a formatting in tconfig: when generating a default config 
+        file, line wrapping was occuring in the middle of words.
+
 2007-10-03  Brian Granger <ellisonbg@gmail.com>
 
 	* ipython1.kernel:  Any FunctionType can now be pulled or 
